# GD32VW55x_WiFi_BLE_SDK

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_build.bat  cmake_build.sh  release_notes.txt
MBL/mainboot/: CMakeLists.txt  mbl.c
MBL/project/: mbl_afterbuild.sh
MSDK/: CMakeLists.txt
MSDK/FatFS/port/: fatfs.c  fatfs.h
MSDK/FatFS/src/: diskio.c  ffconf.h
MSDK/app/: _build_date.h  app_cfg.h  atcmd.c  atcmd.h  atcmd_azure.c  atcmd_azure.h  atcmd_httpc.c  atcmd_mqtt.c  atcmd_tcpip.c  atcmd_tcpip.h  atcmd_wifi.c  cmd_gpio.h  cmd_shell.c  cmd_shell.h  main.c  ota_demo.c  ota_demo.h  ping.c  rftest_cfg.h
MSDK/app/atcmd_ota_demo/: atcmd_ota_demo.c  atcmd_ota_demo.h
MSDK/app/mqtt_app/: mqtt_client_config.h  mqtt_cmd.c  mqtt_cmd.h  mqtt_ssl_config.c
MSDK/ble/: CMakeLists.txt
MSDK/ble/app/: app_adv_mgr.c  app_blue_courier_prot.c  app_dfu_cli.c  app_dfu_def.h  app_dfu_srv.c  app_sec_mgr.c  app_sec_mgr.h  atcmd_ble.c
MSDK/ble/profile/sample/: ble_sample_srv.c
MSDK/cloud/alicloud/: CMakeLists.txt  Config.in  Config.linkkit  LICENSE  README.md  make.settings  makefile  project.mk  sdk-c.mk
MSDK/examples/: examples.lds  image_afterbuild.bat
MSDK/mbedtls/: CMakeLists.txt
MSDK/plf/src/: dsp.c  (+2 more)
MSDK/projects/: image_afterbuild.bat  image_afterbuild.sh  image_prebuild.sh
MSDK/util/: CMakeLists.txt
MSDK/wifi_manager/: wifi_eloop.c  wifi_eloop.h  wifi_management.c  wifi_management.h  wifi_net_ip.c  wifi_net_ip.h  wifi_netlink.c  wifi_netlink.h  wifi_softap_provisioning.c  wifi_vif.c  wifi_vif.h  wifi_wpa.c  wifi_wpa.h
ROM-EXPORT/bootloader/: rom_sys.h
config/: platform_def.h
scripts/cmake/: toolchain.cmake
scripts/images/: readme.txt
tools/: xpack-openocd-0.11.0-3_windows.7z
(+1266 files in other folders)
